--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "@prisma/client": "5.12.1",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-query": "^4.18.0",
     "@tanstack/react-query-devtools": "^4.36.1",
     "@trpc/client": "11.0.0-rc.332",
@@ -20,12 +23,18 @@
     "@trpc/server": "11.0.0-rc.332",
     "@types/bcrypt": "^5.0.2",
     "bcrypt": "^5.1.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "jose": "^5.2.4",
+    "lucide-react": "^0.366.0",
     "next": "14.1.4",
     "prisma": "^5.12.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.2",
     "superjson": "^2.2.1",
+    "tailwind-merge": "^2.2.2",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
   },
   "devDependencies": {
