--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@prisma/client": "5.12.1",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
     "@tanstack/react-query": "^4.18.0",
     "@tanstack/react-query-devtools": "^4.36.1",
     "@trpc/client": "11.0.0-rc.332",
