--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "clsx": "^2.1.0",
     "jose": "^5.2.4",
     "lucide-react": "^0.366.0",
+    "moment": "^2.30.1",
     "next": "14.1.4",
     "prisma": "^5.12.1",
     "react": "^18",
